# ad-xolib

src/: CMakeLists.txt  common.h
src/xodr/: xodr.cxx  xodr.h
src/xosc/: xosc.cxx  xosc.h
